{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 152,
  "lineage": "7dabd0a5-a5ad-25ed-c7b3-884587797038",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:internet-gateway/igw-0b7eb97fda9a5d5a4",
            "id": "igw-0b7eb97fda9a5d5a4",
            "owner_id": "477478162709",
            "region": "us-east-1",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0e19586e4b798d472"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "igw-0b7eb97fda9a5d5a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:route-table/rtb-0a702a42d3426ec0f",
            "id": "rtb-0a702a42d3426ec0f",
            "owner_id": "477478162709",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7eb97fda9a5d5a4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e19586e4b798d472"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "rtb-0a702a42d3426ec0f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ace8ea1b853daafc",
            "region": "us-east-1",
            "route_table_id": "rtb-0a702a42d3426ec0f",
            "subnet_id": "subnet-026d8f52f963c94cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "rtbassoc-0ace8ea1b853daafc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.sub_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a43ebb4e09c9b49",
            "region": "us-east-1",
            "route_table_id": "rtb-0a702a42d3426ec0f",
            "subnet_id": "subnet-05845ff90b69de3cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "rtbassoc-03a43ebb4e09c9b49",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.sub_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:security-group/sg-09b4b21669d06b2fd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b4b21669d06b2fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "179.98.123.83/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "179.98.123.83/32"
                ],
                "description": "",
                "from_port": 8082,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8082
              }
            ],
            "name": "eks",
            "name_prefix": "",
            "owner_id": "477478162709",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks"
            },
            "tags_all": {
              "Name": "eks"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e19586e4b798d472"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "sg-09b4b21669d06b2fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:security-group/sg-0ef93e14468fda808",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef93e14468fda808",
            "ingress": [
              {
                "cidr_blocks": [
                  "179.98.123.83/32"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b4b21669d06b2fd"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds",
            "name_prefix": "",
            "owner_id": "477478162709",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds"
            },
            "tags_all": {
              "Name": "rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e19586e4b798d472"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "sg-0ef93e14468fda808",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:subnet/subnet-026d8f52f963c94cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026d8f52f963c94cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "477478162709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sub_a"
            },
            "tags_all": {
              "Name": "sub_a"
            },
            "vpc_id": "vpc-0e19586e4b798d472"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "subnet-026d8f52f963c94cd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sub_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:subnet/subnet-05845ff90b69de3cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05845ff90b69de3cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "477478162709",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sub_b"
            },
            "tags_all": {
              "Name": "sub_b"
            },
            "vpc_id": "vpc-0e19586e4b798d472"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "subnet-05845ff90b69de3cc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:vpc/vpc-0e19586e4b798d472",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e57fbd78671753e",
            "default_route_table_id": "rtb-0098ac664796a09d7",
            "default_security_group_id": "sg-056363c47769dca76",
            "dhcp_options_id": "dopt-08ca3a58815b9837f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e19586e4b798d472",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0098ac664796a09d7",
            "owner_id": "477478162709",
            "region": "us-east-1",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "vpc-0e19586e4b798d472",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:security-group-rule/sgr-026a64f2829d58025",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-026a64f2829d58025",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ef93e14468fda808",
            "security_group_rule_id": "sgr-026a64f2829d58025",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "sgr-026a64f2829d58025",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:security-group-rule/sgr-02bca3ffba933fa75",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02bca3ffba933fa75",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09b4b21669d06b2fd",
            "security_group_rule_id": "sgr-02bca3ffba933fa75",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "sgr-02bca3ffba933fa75",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.eks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_app_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:security-group-rule/sgr-038499a2cb0d74779",
            "cidr_ipv4": "179.98.123.83/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-038499a2cb0d74779",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09b4b21669d06b2fd",
            "security_group_rule_id": "sgr-038499a2cb0d74779",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "sgr-038499a2cb0d74779",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.eks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:security-group-rule/sgr-0fbc39aa11c4a68b0",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0fbc39aa11c4a68b0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09b4b21669d06b2fd",
            "region": "us-east-1",
            "security_group_id": "sg-0ef93e14468fda808",
            "security_group_rule_id": "sgr-0fbc39aa11c4a68b0",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "sgr-0fbc39aa11c4a68b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.eks",
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:security-group-rule/sgr-0191a975f65e5e248",
            "cidr_ipv4": "179.98.123.83/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0191a975f65e5e248",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ef93e14468fda808",
            "security_group_rule_id": "sgr-0191a975f65e5e248",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "sgr-0191a975f65e5e248",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_mysql_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:security-group-rule/sgr-0d3c84fcaa6e06b59",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0d3c84fcaa6e06b59",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ef93e14468fda808",
            "security_group_rule_id": "sgr-0d3c84fcaa6e06b59",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "sgr-0d3c84fcaa6e06b59",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.rds",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:security-group-rule/sgr-000c4bbddc39c852c",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-000c4bbddc39c852c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09b4b21669d06b2fd",
            "security_group_rule_id": "sgr-000c4bbddc39c852c",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "sgr-000c4bbddc39c852c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.eks",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "swagger_my_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:477478162709:security-group-rule/sgr-0447d620b13d4b890",
            "cidr_ipv4": "179.98.123.83/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8082,
            "id": "sgr-0447d620b13d4b890",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-09b4b21669d06b2fd",
            "security_group_rule_id": "sgr-0447d620b13d4b890",
            "tags": null,
            "tags_all": {},
            "to_port": 8082
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "477478162709",
            "id": "sgr-0447d620b13d4b890",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.eks",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}